--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,11 @@ mainClassName = 'algorithms.Main'
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
     testImplementation     'junit:junit:4.13'
+    compile 'org.apache.commons:commons-lang3:3.11'
+
 }
