--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -55,7 +55,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
           java-version: '11'
-          distribution: 'adopt'
+          distribution: 'zulu'
     - name: Build with Gradle
       run: ./gradlew build
 
